--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -99,6 +99,16 @@
     <Compile Include="admin\Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="App_GlobalResources\molecule.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>molecule.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\molecule.fr.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>molecule.fr.resx</DependentUpon>
+    </Compile>
     <Compile Include="AtomeAccessModule.cs" />
     <Compile Include="AtomeSiteMapProvider.cs" />
     <Compile Include="atomes\photo\Admin.aspx.cs">
@@ -488,12 +498,6 @@
     <Content Include="NeatUpload\NeatUpload.js" />
     <Content Include="NeatUpload\Progress.aspx" />
     <Content Include="NeatUpload\Progress.js" />
-    <Content Include="admin\App_LocalResources\Default.aspx.fr.resx">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="admin\App_LocalResources\Default.aspx.resx">
-      <SubType>Designer</SubType>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_GlobalResources\photo.fr.resx">
@@ -522,6 +526,18 @@
     <Content Include="App_Themes\bloup\images\folder.png" />
     <Content Include="atomes\photo\images\internet-web-browser.png" />
     <Content Include="ProviderSelector.ascx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_GlobalResources\molecule.resx">
+      <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>molecule.Designer.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_GlobalResources\molecule.fr.resx">
+      <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>molecule.fr.designer.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Themes\raw\" />
