--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -16,13 +16,6 @@
 			<section name="WebMusic.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		</sectionGroup>
 	</configSections>
-	<location allowOverride="false" path="App_Themes">
-		<system.web>
-			<authorization>
-				<allow users="*"/>
-			</authorization>
-		</system.web>
-	</location>
 	<location allowOverride="false" path="admin">
 		<system.web>
 			<authorization>
@@ -33,7 +26,7 @@
 	</location>
 	<system.web>
 		<httpRuntime maxRequestLength="2097151" executionTimeout="36000"/>
-		<customErrors mode="On">
+		<customErrors mode="Off">
 			<error statusCode="500" redirect="~/Error.aspx"/>
 		</customErrors>
 		<globalization uiCulture="auto" culture="auto"/>
